# kikai-tech-demo

./: CMakeLists.txt  README.md
DemoProj/cfg/: config.h
DemoProj/data/: app_config.json
DemoProj/dependencies/: deps.cmake
DemoProj/dependencies/opencv/include/opencv2/: opencv_modules.hpp
DemoProj/dependencies/opencv/x64/vc14/lib/: opencv_core340.lib  opencv_core340d.lib  opencv_highgui340.lib  opencv_highgui340d.lib  opencv_imgcodecs340.lib  opencv_imgcodecs340d.lib  opencv_imgproc340.lib  opencv_imgproc340d.lib  opencv_videoio340.lib  opencv_videoio340d.lib
DemoProj/dependencies/openvino/v2021.2.185/lib/: inference_engine.lib  inference_engine_ir_reader.lib  inference_engine_ir_readerd.lib  inference_engine_legacy.lib  inference_engine_legacyd.lib  inference_engined.lib
DemoProj/models/: OVBuildInModels.cpp  pedestrian_detection_adas_0002.h
DemoProj/src/: Application.cpp  Application.h  Detector.cpp  Detector.h  OVBuildInModels.h  OVEngine.cpp  OVEngine.h  Object.cpp  Object.h  PedestrianDetector.cpp  PedestrianDetector.h  main.cpp
